syntax = "proto3";

package io.evitadb.externalApi.grpc.generated;
option java_multiple_files = true;
option csharp_namespace = "EvitaDB";

import "GrpcAttribute.proto";
import "GrpcPrice.proto";
import "GrpcAssociatedData.proto";
import "GrpcEnums.proto";
import "GrpcEvitaDataTypes.proto";
import "google/protobuf/wrappers.proto";

message GrpcEntityReference {
  string entityType = 1;
  int32 primaryKey = 2;
  int32 version = 3;
}

message GrpcSealedEntity {
  string entityType = 1;
  int32 primaryKey = 2;
  int32 version = 3;
  int32 schemaVersion = 4;
  google.protobuf.Int32Value parent = 5;
  repeated GrpcEntityReference parentReference = 6;
  repeated GrpcSealedEntity parentEntity = 7;
  map<string, GrpcEvitaValue> globalAttributes = 8;
  map<string, GrpcLocalizedAttribute> localizedAttributes = 9;
  repeated GrpcPrice prices = 10;
  GrpcPrice priceForSale = 11;
  GrpcPriceInnerRecordHandling priceInnerRecordHandling = 12;
  repeated GrpcReference references = 13;
  map<string, GrpcEvitaAssociatedDataValue> globalAssociatedData = 14;
  map<string, GrpcLocalizedAssociatedData> localizedAssociatedData = 15;
  repeated GrpcLocale locales = 16;
}

message GrpcBinaryEntity {
  string entityType = 1;
  int32 primaryKey = 2;
  int32 schemaVersion = 4;
  bytes entityStoragePart = 5;
  repeated bytes attributeStorageParts = 6;
  repeated bytes associatedDataStorageParts = 7;
  bytes priceStoragePart = 8;
  bytes referenceStoragePart = 9;
}

message GrpcReference {
  string referenceName = 1;
  int32 version = 2;
  GrpcEntityReference referencedEntityReference = 3;
  GrpcSealedEntity referencedEntity = 4;
  oneof groupReferenceType {
    GrpcEntityReference groupReferencedEntityReference = 5;
    GrpcSealedEntity groupReferencedEntity = 6;
  }
  map<string, GrpcEvitaValue> globalAttributes = 7;
  map<string, GrpcLocalizedAttribute> localizedAttributes = 8;
  GrpcCardinality referenceCardinality = 9;
}

message GrpcTypeReferences {
  repeated GrpcReference references = 1;
}

